--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,46 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  margin: 0 auto;
+  max-width: 1920px;
+  font-size: 14px;
+  color: black;
+  word-break: normal;
+  word-wrap: break-word;
+  font-family: "Spoqa Han Sans Neo";
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+p,
+label {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+// 현대 유저 친화 위함 reset
+button {
+  cursor: pointer;
+
+  :disabled {
+    cursor: not-allowed;
+  }
+}
+
+* {
+  outline: none;
+  font-family: inherit;
+  box-sizing: border-box;
+}
+
+input:disabled {
+  -webkit-text-fill-color: currentColor;
+  opacity: 1;
 }
